[gd_scene load_steps=10 format=3 uid="uid://bcrrxv7re65vw"]

[ext_resource type="Script" path="res://scenes/MainMP.gd" id="1_2hh7k"]
[ext_resource type="Script" path="res://scenes/Player.gd" id="2_rfd3w"]
[ext_resource type="Script" path="res://scenes/Ball.gd" id="3_833b5"]
[ext_resource type="Script" path="res://scenes/Player2.gd" id="3_xril6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_83qmu"]
size = Vector2(20, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_62aks"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o5st2"]
size = Vector2(1152, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_11fae"]
size = Vector2(1152, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_446y0"]
size = Vector2(64, 648)

[node name="MainMP" type="ColorRect"]
texture_filter = 1
texture_repeat = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0901961, 0.0901961, 0.207843, 1)
script = ExtResource("1_2hh7k")
metadata/_edit_lock_ = true

[node name="Player" type="StaticBody2D" parent="."]
position = Vector2(50, 324)
script = ExtResource("2_rfd3w")

[node name="ColorRect" type="ColorRect" parent="Player"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -61.0
offset_right = 20.0
offset_bottom = 59.0
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(10, -1)
shape = SubResource("RectangleShape2D_83qmu")
metadata/_edit_lock_ = true

[node name="Player2" type="StaticBody2D" parent="."]
position = Vector2(1082, 324)
script = ExtResource("3_xril6")

[node name="ColorRect" type="ColorRect" parent="Player2"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -61.0
offset_right = 20.0
offset_bottom = 59.0
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2"]
position = Vector2(10, -1)
shape = SubResource("RectangleShape2D_83qmu")
metadata/_edit_lock_ = true

[node name="Ball" type="CharacterBody2D" parent="."]
position = Vector2(576, 324)
collision_mask = 3
script = ExtResource("3_833b5")

[node name="ColorRect" type="ColorRect" parent="Ball"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("RectangleShape2D_62aks")
metadata/_edit_lock_ = true

[node name="Borders" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="Top" type="CollisionShape2D" parent="Borders"]
position = Vector2(576, -32)
shape = SubResource("RectangleShape2D_o5st2")
metadata/_edit_lock_ = true

[node name="Bottom" type="CollisionShape2D" parent="Borders"]
position = Vector2(576, 676)
shape = SubResource("RectangleShape2D_11fae")
metadata/_edit_lock_ = true

[node name="ScoreLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreLeft"]
position = Vector2(-32, 324)
shape = SubResource("RectangleShape2D_446y0")
metadata/_edit_lock_ = true

[node name="ScoreRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreRight"]
position = Vector2(1184, 324)
shape = SubResource("RectangleShape2D_446y0")
metadata/_edit_lock_ = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="PlayerScore" type="Label" parent="HUD"]
offset_left = 456.0
offset_top = 5.0
offset_right = 496.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player2Score" type="Label" parent="HUD"]
offset_left = 648.0
offset_top = 5.0
offset_right = 688.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BallTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="ScoreLeft" to="." method="_on_score_left_body_entered"]
[connection signal="body_entered" from="ScoreRight" to="." method="_on_score_right_body_entered"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
